# bfs-dynamic-parallelism

./: .gitignore  CMakeLists.txt  README.md
include/: bfs_cpu.h  bfs_cpu_queue.h  bfs_dynamic.h  bfs_dynamic_parallel.h  bfs_frontier.h  bfs_gpu.h  bfs_shared.h  csr.h  timer.h  utils_cuda.h
src/: main.cpp  main.cu
